// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Metadata /> should render properly 1`] = `
.emotion-0 {
  padding: 16px;
  color: #ffffff;
}

<div
  className="emotion-0"
>
  Select an asset to view its metadata.
</div>
`;

exports[`<Metadata /> should render selected asset 1`] = `
Array [
  .emotion-0 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
  color: #4a90e2;
}

<div
    className="emotion-0"
  >
    TIFF_1MB.tiff
  </div>,
  .emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: -webkit-fit-content;
  min-height: -moz-fit-content;
  min-height: fit-content;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-4:hover {
  background-color: #027aff38;
}

.emotion-4:hover div {
  color: #ffffff;
}

.emotion-4:hover div svg {
  opacity: 1;
}

.emotion-0 {
  font-family: Roboto Condensed;
  color: #808080;
  padding: 16px;
  padding-right: 8px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  color: #e0e0e0;
  padding: 16px;
  padding-left: 8px;
  word-break: break-all;
}

.emotion-3 {
  width: 36px;
  padding: 16px;
  padding-left: 8px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 0;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus {
  color: #ffffff;
}

.emotion-2:hover svg,
.emotion-2.focus-visible:focus svg {
  opacity: 1;
}

.emotion-2[aria-disabled=true] {
  color: #808080;
}

.emotion-2 svg {
  opacity: 0;
}

<div
    className="emotion-4"
  >
    <div
      className="emotion-0"
    >
      ID
    </div>
    <div
      className="emotion-1"
      title="vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C"
    >
      vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C
    </div>
    <div
      className="emotion-3"
    >
      <button
        className="emotion-2"
        onClick={[Function]}
        title="Copy to Clipboard"
        type="button"
      >
        <svg
          data-file-name="copy.svg"
          height={20}
        />
      </button>
    </div>
  </div>,
  .emotion-3 {
  padding: 8px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border: 1px solid #808080;
  border-radius: 2px;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  border-radius: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  background-color: #808080;
  color: #ffffff;
  text-transform: uppercase;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  border-radius: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  background-color: transparent;
  color: #808080;
  text-transform: uppercase;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover {
  color: #ffffff;
}

<div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        pretty
      </button>
      <button
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        raw json
      </button>
    </div>
  </div>,
  .emotion-40 {
  overflow: auto;
}

.emotion-4 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-4:last-of-type > div:last-of-type {
  border-bottom: 1px solid #3b3b3b;
}

.emotion-4:first-of-type > div {
  border-top: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid #3b3b3b;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
}

.emotion-3:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-3 h4 {
  font-size: 15px;
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div
    className="emotion-40"
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
        onClick={[Function]}
        style={Object {}}
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          Analysis
        </h4>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
        onClick={[Function]}
        style={Object {}}
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          Clip
        </h4>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
        onClick={[Function]}
        style={Object {}}
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          Files
        </h4>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
        onClick={[Function]}
        style={Object {}}
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          Media
        </h4>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
        onClick={[Function]}
        style={Object {}}
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          Metrics
        </h4>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
        onClick={[Function]}
        style={Object {}}
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          Similarity
        </h4>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
        onClick={[Function]}
        style={Object {}}
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          Source
        </h4>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
        onClick={[Function]}
        style={Object {}}
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          System
        </h4>
      </div>
    </div>
  </div>,
]
`;

exports[`<Metadata /> should render selected asset 2`] = `
Array [
  .emotion-0 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
  color: #4a90e2;
}

<div
    className="emotion-0"
  >
    TIFF_1MB.tiff
  </div>,
  .emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: -webkit-fit-content;
  min-height: -moz-fit-content;
  min-height: fit-content;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-4:hover {
  background-color: #027aff38;
}

.emotion-4:hover div {
  color: #ffffff;
}

.emotion-4:hover div svg {
  opacity: 1;
}

.emotion-0 {
  font-family: Roboto Condensed;
  color: #808080;
  padding: 16px;
  padding-right: 8px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  color: #e0e0e0;
  padding: 16px;
  padding-left: 8px;
  word-break: break-all;
}

.emotion-3 {
  width: 36px;
  padding: 16px;
  padding-left: 8px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 0;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus {
  color: #ffffff;
}

.emotion-2:hover svg,
.emotion-2.focus-visible:focus svg {
  opacity: 1;
}

.emotion-2[aria-disabled=true] {
  color: #808080;
}

.emotion-2 svg {
  opacity: 0;
}

<div
    className="emotion-4"
  >
    <div
      className="emotion-0"
    >
      ID
    </div>
    <div
      className="emotion-1"
      title="vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C"
    >
      vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C
    </div>
    <div
      className="emotion-3"
    >
      <button
        className="emotion-2"
        onClick={[Function]}
        title="Copy to Clipboard"
        type="button"
      >
        <svg
          data-file-name="copy.svg"
          height={20}
        />
      </button>
    </div>
  </div>,
  .emotion-3 {
  padding: 8px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border: 1px solid #808080;
  border-radius: 2px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  border-radius: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  background-color: #808080;
  color: #ffffff;
  text-transform: uppercase;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover {
  color: #ffffff;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  border-radius: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  background-color: transparent;
  color: #808080;
  text-transform: uppercase;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0:hover {
  color: #ffffff;
}

<div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        pretty
      </button>
      <button
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        raw json
      </button>
    </div>
  </div>,
  .emotion-0 {
  height: 100%;
  overflow: auto;
}

<div
    className="emotion-0"
  >
    <JsonDisplay
      json={
        Object {
          "analysis": Object {
            "zvi": Object {
              "tinyProxy": Array [
                "#f3dfc3",
                "#f4efd8",
                "#c18f46",
                "#ebdfbd",
                "#ccd3c0",
                "#e7d4bb",
                "#beae8e",
                "#cabf9e",
                "#d2c09c",
              ],
            },
          },
          "clip": Object {
            "length": 1,
            "pile": "pUn6wBxUN7x9JxOxLkvruOyNdYA",
            "sourceAssetId": "vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C",
            "start": 1,
            "stop": 1,
            "type": "page",
          },
          "files": Array [
            Object {
              "attrs": Object {
                "height": 434,
                "width": 650,
              },
              "category": "proxy",
              "mimetype": "image/jpeg",
              "name": "image_650x434.jpg",
              "size": 89643,
              "url": "https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_650x434.jpg",
            },
            Object {
              "attrs": Object {
                "height": 341,
                "width": 512,
              },
              "category": "proxy",
              "mimetype": "image/jpeg",
              "name": "image_512x341.jpg",
              "size": 60713,
              "url": "https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_512x341.jpg",
            },
            Object {
              "attrs": Object {
                "height": 213,
                "width": 320,
              },
              "category": "proxy",
              "mimetype": "image/jpeg",
              "name": "image_320x213.jpg",
              "size": 30882,
              "url": "https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_320x213.jpg",
            },
          ],
          "media": Object {
            "aspect": 1.5,
            "height": 434,
            "length": 1,
            "orientation": "landscape",
            "type": "image",
            "width": 650,
          },
          "metrics": Object {
            "pipeline": Array [
              Object {
                "checksum": 1621235190,
                "executionDate": "2020-03-03T21:22:27.694149",
                "executionTime": 0.11,
                "module": "standard",
                "processor": "zmlp_core.core.processors.PreCacheSourceFileProcessor",
              },
              Object {
                "checksum": 1426657387,
                "executionDate": "2020-03-03T21:22:28.215069",
                "executionTime": 0.26,
                "module": "standard",
                "processor": "zmlp_core.image.importers.ImageImporter",
              },
              Object {
                "checksum": 2001473853,
                "executionTime": 0,
                "module": "standard",
                "processor": "zmlp_core.office.importers.OfficeImporter",
              },
              Object {
                "checksum": 3310423168,
                "executionTime": 0,
                "module": "standard",
                "processor": "zmlp_core.video.VideoImporter",
              },
              Object {
                "checksum": 1841569083,
                "executionDate": "2020-03-03T21:22:29.654215",
                "executionTime": 0,
                "module": "standard",
                "processor": "zmlp_core.core.processors.AssertAttributesProcessor",
              },
            ],
          },
          "similarity": Object {
            "simhash": "NMGPEKEACJCHEDDBCHFAPBAHNPPPKMPOPCMODAPNFPCPOPBNEPCPPBHPPCBPDBPJHBGPPPNKOMBHBPNPAHLFCPPPFPGBKPPFDPPHDFAADNKGADBGPFFFGKABGPDLFPPLPPNPPPAAJBPPPLDPKAMCKANPAGCBPBPCEPEAKMHEHPBLKIIFJPOPBPPMGONPPGPFDPCJNPPMPIPPPPHPPCBJPHPGJDNBMGBAPAEBCFDPLPPAJLKANAPPACCPPEAMPADJMCAIPIKNNPDAPMPPCAAOPBADBDJPHGEKFGIDBPHDPPAMPPHLBGPPPHPEPPNAPPPAHOPCLAKPPPFAAHCPFCFPAPBPILPADJAFMJDPCPMCKBBBFBGPLPJMEDDMHPGHMMJPPABAJCAGCFJFNJPBPEPCPCINFEHPHCCPLPGPOIPPMPNIPNDDELAPILCEAPPAIPPDPPBGEFPJLFPJPIECMAEPABALFGLPPLFDPGDABPLMJDPDGBHFPPBPPCPFDPPDFJPAPCDGGGPPGPCPPFIKCHPPPBPLJBPPJIPHLPPKGKDPBCCLNGMAPFHACDINFPPEPBHDLCPGPFPPKPDAJPBEPPPPGPIADNAPABCKHIKPBDLPBPHPLAPFPPDBBEPEHPPPPFBJFANJPMPCFHMDEPDPMNIBDPPAHDBPPNECHLJAIDJFPOLPPBHLABEHPGPPKBAKIPJPBOPPBPHCBIPPAOPIPBAJHBMPPCMADHMPMFKPDEDOPBBAGNNACAADPHDCEKPDPGKHPBFPGJLPPINPPPBPPEANCPPAPBKBFGPAIPEFPFDJGPHAPCPIJHLCBEPPMPPCFPNEPIAPAAEPDHFBMHCNACPFFFDPBLMPPHEMAAIJODGCGCHIGDMAPHDNFEFMHPLPPBAKFBPPAPFPCGJNEDBOBPCLNIIIAEFGAGPGIEAFNPCCCBPKIDIPAPPPPOBPFPADEPPDCECMBFJPAKOEHPBKPGEOBFLNPFAIPPCKPCPHPAIPLPPLEJFFIMICPAPMEPKDNBDOFPJEPCAJEJKEMLHCGENAPEPACPPNPCCLDINPHCDBPHADKIFEPCIPKJIOFOPDEPGEDEPPGPDMBJKPBEHBEPLPFNPJGPJPBPHJHGHPAAEKDIEEAEAGJFPCGLPELPILCAPCFPELIICCPCLPJHCADFIPIGCFLIKPGPJGDCALPBDJPPEGCPLJFGEPBHDPPBPPPIKGDEEDENMBLLIGNECBPEFPBMJKCGPDPJOCNDNLANPKAPPPGPLBBBAJIGEADBEJFFNEGPNKPPPBPGEAELPKLDEGAANIFCLBPPPPNDJGDAFEEACPNEPKKPPKGAHLPDPGPBKPFBDIDDAMPPAIHPHHAPAEGOPCPJEABPPPBAKPLABPCPHNPAEMDPPPPDAJANPPDMPEGFIDEEAAJLGPHPHPCLDPDPFIDCAPPPHIPPPPEDHJDBBPHFKBAOPPPFGEPJPLPCDPBAJCPPDPEFGBFECPIAOGHAPEPAMPNPCPBAPODHNDCIPAGPPPFCPPDMFCLCEHPHAEACACIPCDPPPOMLAKMPPBGDPLFDBMFAPCMIKPHFPPCPPDFPPBPPKPPPPPFECBFIPKKEIPPPPBCKPLEPDEPKCHEPCEJDEKABHBOPPAAPIKABKHBPHPGPDBPHAPJKEDBPBBPLCPFDEEKHEPDFNPGJPAPPOPCCCJPPKPAEDIFPADNADAPDPPEMFPMPPLMPIPIADLPPPFINEPBBBAFBKIFPDPPPEBNPFBEMPFCCEGHEJIMACOCCPHBJPPNKPIPACDPBJPFKPAPIDNPCIGGIPHJGPCKELBLAAPLBBHHHPPCBHPLFAPPJPEEPLHPGPFAOOPPFPJHILPDECMJACKHHAPANLPGALJBNAFODHMJCPPFPJICDPOJBGPKFFPGIJPOHPJAIEPBBKCBIIMIPFPPPAGDDHHHIGGKHFJPPPPEKBGHDCHDPAGEPPIPDPIKALNPHJBGIPPNFINIDPPPEPPCBPPLMFCLGGPDGGLKINGBGKEPHPBPBFHAOBGAHCDGNEBDDCGPDCP",
          },
          "source": Object {
            "checksum": 1867533868,
            "extension": "tiff",
            "filename": "TIFF_1MB.tiff",
            "filesize": 1131930,
            "mimetype": "image/tiff",
            "path": "gs://zorroa-dev-data/image/TIFF_1MB.tiff",
            "url": "https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/source/TIFF_1MB.tiff",
          },
          "system": Object {
            "dataSourceId": "10509c20-5d95-11ea-baea-364023b135f5",
            "jobId": "106d4be1-5d95-11ea-baea-364023b135f5",
            "projectId": "89382033-bcbb-4c8f-81a9-3d0883298a81",
            "state": "Analyzed",
            "taskId": "106e0f32-5d95-11ea-baea-364023b135f5",
            "timeCreated": "2020-03-03T21:22:24.922700Z",
            "timeModified": "2020-03-03T21:22:47.575195Z",
          },
        }
      }
    />
  </div>,
]
`;
